<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/bottom_cornor_40">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:src="@drawable/white_back_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/custom_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/make_customer_order"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/black_btn_10_back"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/what_item"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/item_name1"
                    android:inputType="text|textMultiLine"
                    android:padding="@dimen/_10sdp"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvCompText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/where_item_is"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etItemLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="text|textMultiLine"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/item_location"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/landmark_location"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etLandmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/landmark1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:inputType="text|textMultiLine"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/full_name"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/full_name_shop_name"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text|textMultiLine"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/mobile_number_from"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/mobile_number"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/drop_off_location"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:visibility="gone"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etDropLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:focusable="false"
                    android:hint="@string/drop_location"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/drop_landmark_location"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etDropLandmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/landmark1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="start"
                android:text="@string/pickup_vehicle_from_list"
                android:textAllCaps="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_3sdp">

                <EditText
                    android:id="@+id/etVehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawablePadding="@dimen/_10sdp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/select_vehicle"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/copy"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/green_circular_bg"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</layout>