<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border_gray"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tv_message"
                    style="@style/tv_type1"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/order_cancel" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray" />



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:contentPadding="@dimen/_3sdp">

                    <EditText
                        android:id="@+id/etReason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="text|textMultiLine"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/enter_reason"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                </androidx.cardview.widget.CardView>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_ok"
                        style="@style/tv_type1"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:text="@string/ok" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/tv_cancel"
                        style="@style/tv_type1"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/cancel" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>